# learning-template

./: .gitignore  AGENTS.md  HANDOFF.md.template  README.md  pyproject.toml  references.md
scripts/: download_blogs.py  download_papers.py  init_project.py  init_project.sh
src/PLACEHOLDER/: __init__.py
src/__PKG__/: __init__.py
