[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PLACEHOLDER"
version = "0.0.1"
description = "DESCRIPTION"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "marimo[recommended]",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pyright>=1.1.385",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pyright>=1.1.385",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PLACEHOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["PLACEHOLDER"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".git",
    ".venv",
    "build",
    "dist",
    ".pytest_cache",
    ".ruff_cache",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
venvPath = "."
venv = ".venv"
